cmake_minimum_required(VERSION 3.29)
project(SDLtest)
set(CXX_STANDARD 23)
include_directories(include/imgui)
include_directories(include/imgui/backends)
include_directories(include/SDL3)
include_directories(include)
aux_source_directory(. a)
aux_source_directory(include/imgui a)
# aux_source_directory(include/imgui/backends a)
# file(GLOB a include/imgui/backends/imgui_impl_opengl3_loader.h)
set(IMGUI_BACKEND_DIR ${CMAKE_SOURCE_DIR}/include/imgui/backends)
set(b
    ${IMGUI_BACKEND_DIR}/imgui_impl_sdl3.cpp
    ${IMGUI_BACKEND_DIR}/imgui_impl_opengl3.cpp
)
aux_source_directory(include/SDL3 a)
message("buildfile:" ${a})
link_directories(lib)
link_directories(SDL3::SDL3)
add_executable(SDLtest ${a} ${b})
target_link_libraries(SDLtest libSDL3.dll.a opengl32)
file(COPY SDL3.dll DESTINATION /)
